Massive change is css. specially primary color change

--- a/index-2.html
+++ b/index-2.html
@@ -92,7 +92,7 @@
   </div>
 </header>
 <main>
-  <section class="p-100px-tb lg-p-80px-tb md-p-40px-b effect-section">
+  <section class="p-0b lg-p-80px-tb md-p-40px-b effect-section">
     <div class="mask-75 theme-g-bg">
       <div class="shap-top-left opacity-1"> <img class="svg_img dark-color" src="images/style-3.svg" title="" alt=""> </div>
     </div>
