--- a/index.html
+++ b/index.html
@@ -99,12 +99,33 @@
 </header>
 <!-- End Header --> 
 <main>
-  <section class="effect-section">
+  <section id="home" class="effect-section theme-bg">
+    <div id="particles-box" class="particles-box"></div>
     <div class="container">
-      <div class="row justify-content-between align-items-center p-100px-tb full-screen">
+      <div class="row justify-content-between align-items-center p-0 full-screen">
+        <div class="col-lg-7 p-30px-tb">
+          <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">Fast, secure</span> Web Hosting</div>
+          <h2 class="display-4 white-color m-25px-b">Blazing Fast Hosting for Your Business</h2>
+          <p class="lead white-color-light">ProHost is a cloud hosting service provider offering managed hosting solutions to
+            governments, companies and individuals offering web hosting, e-mail, e-commerce and games hosting over shared and dedicated cloud servers. We have a fleet of secure servers and networks in Saudi Arabia, USA, Netherlands and UAE, serving more than 65k customers from 29 countries</p>
+          <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#services">Get Started</a> </div>
+        </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/welcome-ten-banner-image1.png" class="max-width-140" title="" alt=""> </div>
+      </div>
+    </div>
+    <div class="svg-bottom svg-color white-color">
+      <svg width="100%" height="96px" viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
+        <path d="M0,0 C6.83050094,50 15.1638343,75 25,75 C41.4957514,75 62.4956597,0 81.2456597,0 C93.7456597,0 99.9971065,0 100,0 L100,100 L0,100"></path>
+      </svg>
+    </div>
+  </section>
+
+  <section class="effect-section theme-bg">
+    <div class="container">
+      <div class="row justify-content-between align-items-center p-0b full-screen">
         <div class="col-lg-6">
           <div class="p-30px-tb">
-            <div class="font-small border-all-1 border-color-theme2nd border-radius-15 d-inline-block p-15px-r m-20px-b"> <span class="theme2nd-bg p-5px-tb border-all-1 border-color-white p-15px-lr border-radius-15 white-color d-inline-block">Fast, secure</span> Web Hosting.</div>
+            <div class="font-small border-all-1 border-color-theme2nd border-radius-15 d-inline-block p-15px-r m-20px-b"> <span class="theme2nd-bg p-5px-tb border-all-1 border-color-white p-15px-lr border-radius-15 white-color white-bg-alt d-inline-block">Fast, secure</span> Web Hosting.</div>
             <h2 class="display-4 m-25px-b">Blazing Fast Hosting for Your Business</h2>
             <p class="lead">ProHost is a cloud hosting service provider offering managed hosting solutions to
             governments, companies and individuals offering web hosting, e-mail, e-commerce and games hosting over shared and dedicated cloud servers. We have a fleet of secure servers and networks in Saudi Arabia, USA, Netherlands and UAE, serving more than 65k customers from 29 countries</p>
@@ -120,7 +141,7 @@
       </svg>
     </div>
   </section>
-  <section class="section pro-solutions gray-bg">
+  <section class="section pro-solutions gray-bg" id="services">
     <div class="container">
       <div class="row justify-content-center text-center">
         <div class="col-lg-9 m-45px-b">
