--- a/saudi-domain-registration.html
+++ b/saudi-domain-registration.html
@@ -103,7 +103,7 @@
   <div class="shap-top-left opacity-2"> <img src="images/shap_round.svg" title="" alt="" class="svg_img dark-color"> </div>
   <div class="shap-bottom-right opacity-2"> <img src="images/shap_round.svg" title="" alt="" class="svg_img dark-color"> </div>
   <div class="container">
-    <div class="row align-items-center justify-content-center full-screen p-100px-t">
+    <div class="row align-items-center justify-content-center full-screen p-0">
       <div class="col-lg-5 m-30px-tb">
         <h1 class="white-color m-15px-b">Start Saudi domain name with Prohost</h1>
         <p class="white-color">Domain Names are the first step to start creating your site. Choosing a domain name is the beginning of success on the internet and ProHost makes it easy to get it, With competitive prices and special features.</p>
