--- a/wordpress-hosting.html
+++ b/wordpress-hosting.html
@@ -102,7 +102,7 @@
   <section class="g-bg-gray effect-section">
     <div class="mask bg-no-repeat opacity-3" style="background-image: url(images/map-bg.png);"></div>
     <div class="container">
-      <div class="full-screen row align-items-center p-100px-tb">
+      <div class="full-screen row align-items-center p-0b">
         <div class="col-lg-7 m-20px-tb">
           <h1 class="display-4 m-25px-b">The easiest
             <mark class="theme-color">way to grow</mark>
