--- a/blog-details.html
+++ b/blog-details.html
@@ -95,7 +95,7 @@
   <section class="bg-center bg-cover bg-fiexd effect-section">
     <div class="mask dark-g-bg opacity-9"></div>
     <div class="container">
-      <div class="row screen-65 justify-content-center align-items-center p-100px-tb">
+      <div class="row screen-65 justify-content-center align-items-center p-0b">
         <div class="col-lg-10 text-center m-50px-t">
           <h1 class="display-4 font-w-600 white-color m-25px-b">How to make trust your competitive advantage</h1>
           <p class="lead m-0px white-color-light">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa.</p>
