--- a/cloud-vps-server.html
+++ b/cloud-vps-server.html
@@ -102,14 +102,14 @@
   <section id="home" class="effect-section theme-bg">
     <div id="particles-box" class="particles-box"></div>
     <div class="container">
-      <div class="row justify-content-between align-items-center p-100px-t full-screen">
+      <div class="row justify-content-between align-items-center p-0 full-screen">
         <div class="col-lg-7 p-30px-tb">
           <div class="d-inline-block p-5px-tb p-15px-lr font-w-700 border-all-1 border-color-white-alt border-radius-5 m-25px-b white-color white-bg-alt"><span class="yellow-color">Prohost </span>Linux Cloud VPS Servers</div>
           <h2 class="display-4 white-color m-25px-b">Powerfull and Secure Cloud VPS for Website</h2>
           <p class="lead white-color-light">We Have the Features and Service You Deserve! Find the best packeges for you. Which is with High-performance Linux VPS for your Websites</p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/desicated-server.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/desicated-server.png" class="max-width-150" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
