images and menuber changes. also color changes

--- a/Microsoft-Office-365.html
+++ b/Microsoft-Office-365.html
@@ -114,7 +114,7 @@
           </p>
           <div class="p-15px-t"> <a class="m-btn m-btn-white m-btn-shadow m-btn-wide m-btn-radius" href="#plan">Get Started</a> </div>
         </div>
-        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/microsoft.png" class="max-width-140" title="" alt=""> </div>
+        <div class="col-lg-5 text-center m-15px-tb"> <img src="images/hosting17.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
     <div class="svg-bottom svg-color white-color">
@@ -366,7 +366,7 @@
            
           </div>
           <div class="col-lg-6">
-            <div class="card overflow-hidden border-radius-15"> <img src="images/banner-3.png" title="" alt=""> </div>
+            <div class="card overflow-hidden border-radius-15"> <img src="images/hosting16.png" title="" alt=""> </div>
           </div>
         </div>
       </div>
