--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
                         <ul class="mm-link">
                           <li><a href="shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
                           <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
+                          <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
-                        <h6 class="mm-title">Cloud VPS Hosting</h6>
+                        <h6 class="mm-title">Offshore Hosting</h6>
                         <ul class="mm-link">
                           <li><a href="cloud-vps-linux.html">Offshore Cloud VPS Linux Hosting</a></li>
                           <li><a href="cloud-vps-windows.html">Offshore Cloud VPS Windows hosting</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
-                        <h6 class="mm-title">Reseller Hosting</h6>
+                        <h6 class="mm-title">Offshore Hosting</h6>
                         <ul class="mm-link">
                           <li><a href="reseller-hosting.html">Offshore Linux Reseller Hosting</a></li>
                           <li><a href="windows-reseller-hosting.html">Offshore Windows Reseller Hosting</a></li>
@@ -68,9 +69,8 @@
                 <li><a href="https://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
               </ul>
             </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Dadicated Servers</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
                 <li><a href="dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
                 <li><a href="usa-dedicated-server.html">USA Dedicated Servers</a></li>
               </ul>
@@ -113,14 +113,14 @@
         <div class="col-lg-5 text-center m-15px-tb"> <img src="images/welcome-ten-banner-image1.png" class="max-width-140" title="" alt=""> </div>
       </div>
     </div>
-    <div class="svg-bottom svg-color white-color">
+    <div class="svg-bottom svg-color progray">
       <svg width="100%" height="96px" viewBox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="none">
         <path d="M0,0 C6.83050094,50 15.1638343,75 25,75 C41.4957514,75 62.4956597,0 81.2456597,0 C93.7456597,0 99.9971065,0 100,0 L100,100 L0,100"></path>
       </svg>
     </div>
   </section>
 
-  <section class="effect-section theme-bg">
+<!--  <section class="effect-section theme-bg">
     <div class="container">
       <div class="row justify-content-between align-items-center p-0b full-screen">
         <div class="col-lg-6">
@@ -140,7 +140,7 @@
         <path d="M0,0 C6.83050094,50 15.1638343,75 25,75 C41.4957514,75 62.4956597,0 81.2456597,0 C93.7456597,0 99.9971065,0 100,0 L100,100 L0,100"></path>
       </svg>
     </div>
-  </section>
+  </section> -->
   <section class="section pro-solutions gray-bg" id="services">
     <div class="container">
       <div class="row justify-content-center text-center">
@@ -411,19 +411,19 @@
       <div class="row counter text-center p-40px-b">
         <div class="col-sm-4 m-15px-tb">
           <div class="count-data">
-            <div class="display-3 m-10px-b count theme-color after-k" data-to="21" data-speed="21">65</div>
+            <div class="display-3 m-10px-b count white-color after-k" data-to="21" data-speed="21">65</div>
             <p class="font-w-600 lead white-color-light m-0px">Customers</p>
           </div>
         </div>
         <div class="col-sm-4 m-15px-tb">
           <div class="count-data">
-            <div class="display-3 m-10px-b count theme-color" data-to="17" data-speed="17">29</div>
+            <div class="display-3 m-10px-b count white-color" data-to="17" data-speed="17">29</div>
             <p class="font-w-600 lead white-color-light m-0px">Countries</p>
           </div>
         </div>
         <div class="col-sm-4 m-15px-tb">
           <div class="count-data">
-            <div class="display-3 m-10px-b count theme-color" data-to="135" data-speed="135">100%</div>
+            <div class="display-3 m-10px-b count white-color" data-to="135" data-speed="135">100%</div>
             <p class="font-w-600 lead white-color-light m-0px">Uptime</p>
           </div>
         </div>
