colocation page added and change css.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Services</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
                 <li><a href="search-engine-optimisation.html">SEO</a></li>
+                <li><a href="colocation.html">Colocation</a></li>
                 <li><a href="cyber-security.html">Cyber Secuirty</a></li>
                 <li><a href="server-management.html">Server Management & Monitoring</a></li>
               </ul>
