--- a/saudi-domain-registration.html
+++ b/saudi-domain-registration.html
@@ -137,7 +137,7 @@
 <h1 class="mb-20 text-center">Saudi Arabia Domains Price List</h1>
 <h5 class="m-15px-b justify-content-center text-center">ProHost new customers get 40% discount on Saudi domains for new registration, transfer and renewal</h5>
 <div class="mb-20 text-center">  <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/cart.php?a=add&domain=transfer">Transfer Domain</a>  
-   <a class="m-btn m-btn-theme m-btn-radius" href="file:///C:/Users/HP/Desktop/project/Prohost/domain-register.html">Domain Registration</a> </div>
+   <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/cart.php?a=add&domain=register">Domain Registration</a> </div>
 
 <div class="row">
 <div class="col-md-12">
@@ -148,7 +148,6 @@
 <div>Requirements</div>
 <div>activities</div>
 <div>Validity</div>
-<div>USD</div>
 <div>SAR</div>
 </div>
 <div class="flex-row">
@@ -157,7 +156,6 @@
 <div>Documents</div>
 <div>Public</div>
 <div>1 Year</div>
-<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -166,7 +164,6 @@
 <div>Documents</div>
 <div>Companies</div>
 <div>1 Year</div>
-<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -175,7 +172,6 @@
 <div>Documents</div>
 <div>Communications</div>
 <div>1 Year</div>
-<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -184,7 +180,6 @@
 <div>Documents</div>
 <div>non-profit</div>
 <div>1 Year</div>
-<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -193,7 +188,6 @@
 <div>Documents</div>
 <div>education</div>
 <div>1 Year</div>
-<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -202,7 +196,6 @@
 <div>Documents</div>
 <div>medical</div>
 <div>1 Year</div>
-<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -211,7 +204,6 @@
 <div>Documents</div>
 <div>Schools</div>
 <div>1 Year</div>
-<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -220,7 +212,6 @@
 <div>Documents</div>
 <div>Individuals</div>
 <div>1 Year</div>
-<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 <div class="flex-row">
@@ -229,7 +220,6 @@
 <div>Documents</div>
 <div>Public</div>
 <div>1 Year</div>
-<div>31 USD</div>
 <div>115 SAR</div>
 </div>
 </div>
