--- a/search-engine-optimisation.html
+++ b/search-engine-optimisation.html
@@ -186,19 +186,19 @@
       <div class="row counter text-center p-40px-b">
         <div class="col-sm-4 m-15px-tb">
           <div class="count-data">
-            <div class="display-3 m-10px-b count theme-color after-k" data-to="21" data-speed="21">65</div>
+            <div class="display-3 m-10px-b count white-color after-k" data-to="21" data-speed="21">65</div>
             <p class="font-w-600 lead white-color-light m-0px">Customers</p>
           </div>
         </div>
         <div class="col-sm-4 m-15px-tb">
           <div class="count-data">
-            <div class="display-3 m-10px-b count theme-color" data-to="17" data-speed="17">29</div>
+            <div class="display-3 m-10px-b count white-color" data-to="17" data-speed="17">29</div>
             <p class="font-w-600 lead white-color-light m-0px">Countries</p>
           </div>
         </div>
         <div class="col-sm-4 m-15px-tb">
           <div class="count-data">
-            <div class="display-3 m-10px-b count theme-color" data-to="135" data-speed="135">100%</div>
+            <div class="display-3 m-10px-b count white-color" data-to="135" data-speed="135">100%</div>
             <p class="font-w-600 lead white-color-light m-0px">Uptime</p>
           </div>
         </div>
