--- a/index.html
+++ b/index.html
@@ -172,13 +172,13 @@
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
-          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+          <a href="cloud-vps-windows.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-link"></i></div>
             <h5 class="m-0px theme-color-alt">WEB HOSTING</h5>
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
-          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+          <a href="cyber-security.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"> <i class="fas fa-shield-alt"></i> </div>
             <h5 class="m-0px theme-color-alt">CYBER SECURITY</h5>
           </div></a>
@@ -208,13 +208,13 @@
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
-          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+          <a href="email-hosting.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-envelope"></i></div>
             <h5 class="m-0px theme-color-alt">EMAIL HOSTING</h5>
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
-          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+          <a href="cloud-vps-linux.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-hdd"></i> </div>
             <h5 class="m-0px theme-color-alt">VPS</h5>
           </div></a>
@@ -226,27 +226,27 @@
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
-          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+          <a href="saudi-domain-registration.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-globe-europe"></i></div>
             <h5 class="m-0px theme-color-alt">DOMAINS</h5>
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
-          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+          <a href="dedicated-server.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"> <i class="fas fa-server"></i> </div>
             <h5 class="m-0px theme-color-alt">DEDICATED SERVERS</h5>
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
-          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+          <a href="server-management.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-tools"></i></div>
-            <h5 class="m-0px theme-color-alt">SERVER MANAGEMEN</h5>
+            <h5 class="m-0px theme-color-alt">SERVER MANAGEMENT</h5>
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
-          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+          <a href="search-engine-optimisation.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-search"></i></div>
-            <h5 class="m-0px theme-color-alt">EARCH ENGINE OPTIMIZATION</h5>
+            <h5 class="m-0px theme-color-alt">SEARCH ENGINE OPTIMIZATION</h5>
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
@@ -256,19 +256,19 @@
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
-          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+          <a href="colocation.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-clone"></i></div>
             <h5 class="m-0px theme-color-alt">Colocation</h5>
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
-          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+          <a href="microsoft-office-365.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fab fa-microsoft"></i></div>
             <h5 class="m-0px theme-color-alt">Microsoft 365</h5>
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
-          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
+          <a href="google-workspace.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fab fa-google"></i></div>
             <h5 class="m-0px theme-color-alt">Google Workspace</h5>
           </div></a>
