email-hosting pricing

--- a/email-hosting.html
+++ b/email-hosting.html
@@ -120,7 +120,12 @@
   </section>
   <section class="section" id="plan">
     <div class="container">
+      <h3 class="display-4 m-25px-b text-center ">Professional Business Email
+      </h3>
+      <p class="m-0px font-2 text-center">Get a secure, feature-rich, and ad-free email for your business.
+       </p>
       <div class="row align-items-center">
+      
         <div class="col-lg-4 m-15px-tb">
           <div class="price-table-02 hover-top box-shadow-hover card">
             <div class="pt-head d-flex align-items-center justify-content-between">
@@ -128,8 +133,8 @@
                 <h4>Business 5</h4>
                 <span></span> </div>
               <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>40</h5>
-                <label>Per Anually</label>
+                <h5 class="theme-color"><span>SAR</span>450</h5>
+                <label> Anually</label>
               </div>
             </div>
             <div class="pt-body">
@@ -149,8 +154,8 @@
                 <h4>Business 10</h4>
                 <span></span> </div>
               <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>450</h5>
-                <label>Per Annually</label>
+                <h5 class="theme-color"><span>SAR</span>50</h5>
+                <label>Monthly</label>
               </div>
             </div>
             <div class="pt-body">
@@ -172,7 +177,7 @@
               </div>
               <div class="pth-right">
                 <h5 class="theme-color"><span>SAR</span>100</h5>
-                <label>Per Month</label>
+                <label>Monthly</label>
               </div>
             </div>
             <div class="pt-body">
@@ -194,12 +199,12 @@
               </div>
               <div class="pth-right">
                 <h5 class="theme-color"><span>SAR</span>150</h5>
-                <label>Per Month</label>
+                <label>Monthly</label>
               </div>
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 25 Email Accounts</li>
+                <li><i class="fas fa-check"></i> 50 Email Accounts</li>
                 <li><i class="fas fa-check"></i> cPanel Access</li>
                 <li><i class="fas fa-check"></i> POP3 / IMAP / SMTP</li>
               </ul>
@@ -211,17 +216,17 @@
           <div class="price-table-02 hover-top box-shadow-hover card">
             <div class="pt-head d-flex align-items-center justify-content-between">
               <div class="pth-left">
-                <h4>Business 25</h4>
+                <h4>Business 100</h4>
                 <span></span> 
               </div>
               <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>100</h5>
-                <label>Per Month</label>
+                <h5 class="theme-color"><span>SAR</span>200</h5>
+                <label>Monthly</label>
               </div>
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 25 Email Accounts</li>
+                <li><i class="fas fa-check"></i> 100 Email Accounts</li>
                 <li><i class="fas fa-check"></i> cPanel Access</li>
                 <li><i class="fas fa-check"></i> POP3 / IMAP / SMTP</li>
               </ul>
@@ -233,17 +238,17 @@
           <div class="price-table-02 hover-top box-shadow-hover card">
             <div class="pt-head d-flex align-items-center justify-content-between">
               <div class="pth-left">
-                <h4>Business 25</h4>
+                <h4>Business 250</h4>
                 <span></span> 
               </div>
               <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>100</h5>
-                <label>Per Month</label>
+                <h5 class="theme-color"><span>SAR</span>250</h5>
+                <label>Monthly</label>
               </div>
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 25 Email Accounts</li>
+                <li><i class="fas fa-check"></i> 250 Email Accounts</li>
                 <li><i class="fas fa-check"></i> cPanel Access</li>
                 <li><i class="fas fa-check"></i> POP3 / IMAP / SMTP</li>
               </ul>
@@ -255,17 +260,17 @@
           <div class="price-table-02 hover-top box-shadow-hover card">
             <div class="pt-head d-flex align-items-center justify-content-between">
               <div class="pth-left">
-                <h4>Business 25</h4>
+                <h4>Business 500</h4>
                 <span></span> 
               </div>
               <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>100</h5>
-                <label>Per Month</label>
+                <h5 class="theme-color"><span>SAR</span>300</h5>
+                <label>Monthly</label>
               </div>
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 25 Email Accounts</li>
+                <li><i class="fas fa-check"></i> 500 Email Accounts</li>
                 <li><i class="fas fa-check"></i> cPanel Access</li>
                 <li><i class="fas fa-check"></i> POP3 / IMAP / SMTP</li>
               </ul>
@@ -277,17 +282,17 @@
           <div class="price-table-02 hover-top box-shadow-hover card">
             <div class="pt-head d-flex align-items-center justify-content-between">
               <div class="pth-left">
-                <h4>Business 25</h4>
+                <h4>Business 1000</h4>
                 <span></span> 
               </div>
               <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>100</h5>
-                <label>Per Month</label>
+                <h5 class="theme-color"><span>SAR</span>350</h5>
+                <label>Monthly</label>
               </div>
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 25 Email Accounts</li>
+                <li><i class="fas fa-check"></i> 1000 Email Accounts</li>
                 <li><i class="fas fa-check"></i> cPanel Access</li>
                 <li><i class="fas fa-check"></i> POP3 / IMAP / SMTP</li>
               </ul>
@@ -299,17 +304,17 @@
           <div class="price-table-02 hover-top box-shadow-hover card">
             <div class="pt-head d-flex align-items-center justify-content-between">
               <div class="pth-left">
-                <h4>Business 25</h4>
+                <h4>Business Unlimited</h4>
                 <span></span> 
               </div>
               <div class="pth-right">
-                <h5 class="theme-color"><span>SAR</span>100</h5>
-                <label>Per Month</label>
+                <h5 class="theme-color"><span>SAR</span>1000</h5>
+                <label>Monthly</label>
               </div>
             </div>
             <div class="pt-body">
               <ul class="list-type-01 theme">
-                <li><i class="fas fa-check"></i> 25 Email Accounts</li>
+                <li><i class="fas fa-check"></i> Unlimited Email Accounts</li>
                 <li><i class="fas fa-check"></i> cPanel Access</li>
                 <li><i class="fas fa-check"></i> POP3 / IMAP / SMTP</li>
               </ul>
