--- a/saudi-domain-registration.html
+++ b/saudi-domain-registration.html
@@ -128,7 +128,7 @@
             </div>
           </form>        
         <span class="font-small white-color-light links-white">Your Online Journey Starts With A Perfect Domain</span> </div>
-      <div class="col-lg-7"> <img class="max-width-120" src="images/hosting11.png" title="" alt=""> </div>
+      <div class="col-lg-7"> <img class="max-width-120" src="images/hosting18.png" title="" alt=""> </div>
     </div>
   </div>
 </section>
@@ -229,20 +229,60 @@
 </div>
 </div>
 </section>
+
+<section class="section g-bg-gray effect-section">
+  <div class="container">
+    <div class="row md-m-25px-b justify-content-center text-center">
+      <div class="col-lg-8">
+        <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">www.prohost.sa</h6>
+        <p class="font-alt">Focus on your constituents  not web performance, security, and servers.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-6 col-md-4 col-lg-3 m-15px-tb">
+        <div class="card hover-top box-shadow-only-hover p-20px"> <a class="overlay-link" href="#"></a>
+          <div class="icon-50 g-bg-2 white-color border-radius-50 m-20px-b box-shadow"> <i class="fas fa-check-double"></i> </div>
+          <h5>Control Panel</h5>
+          <p class="m-0px">Domain full Control Panel </p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3 m-15px-tb">
+        <div class="card hover-top box-shadow-only-hover p-20px"> <a class="overlay-link" href="#"></a>
+          <div class="icon-50 g-bg-3 white-color border-radius-50 m-20px-b box-shadow"> <i class="fas fa-shield-alt"></i></div>
+          <h5>SECURITY</h5>
+          <p class="m-0px">Prohost provide lock system</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3 m-15px-tb">
+        <div class="card hover-top box-shadow-only-hover p-20px"> <a class="overlay-link" href="#"></a>
+          <div class="icon-50 g-bg-4 white-color border-radius-50 m-20px-b box-shadow"> <i class="fas fa-lock-open"></i> </div>
+          <h5>Domain Transfer</h5>
+          <p class="m-0px">Domain can be transfarable</p>
+        </div>
+      </div>
+      <div class="col-sm-6 col-md-4 col-lg-3 m-15px-tb">
+        <div class="card hover-top box-shadow-only-hover p-20px"> <a class="overlay-link" href="#"></a>
+          <div class="icon-50 g-bg-5 white-color border-radius-50 m-20px-b box-shadow"> <i class="fas fa-phone-alt"></i> </div>
+          <h5>Support</h5>
+          <p class="m-0px">24/7 Expert Support</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <section class="section">
   <div class="container">
 <div class="process-step">
   <div class="row justify-content-between">
     <div class="col-lg-5 align-self-center lg-m-40px-b">
      
-      <h3 class=" m-15px-b">LEARN MORE ABOUT US
-
-      </h3>
-      <p class="m-0px font-2">Hawsabah is an accredited Saudi Domain Name registrar. Hawsabah was launched on 2013 specialized in the IT and Telecommunication sectors. Hawsabah provides very high-quality services and highly skilled support experts who will help you setup your domain and make sure you don’t face any issue.
+      <h3 class=" m-15px-b">LEARN MORE ABOUT US</h3>
+      <p class="m-0px font-2">ProHost is an accredited Saudi Domain Name registrar. ProHost was launched on 2013 specialized in the IT and Telecommunication sectors. ProHost provides very high-quality services and highly skilled support experts who will help you setup your domain and make sure you don’t face any issue.
       </p>
     </div>
     <div class="col-lg-6">
-      <div class="card overflow-hidden border-radius-15"> <img style="height: auto; width: 250px; margin: auto;" src="images/email2.png" title="" alt=""> </div>
+      <div class="card overflow-hidden border-radius-15"> <img style="height: 350px; margin: auto;" src="images/hosting19.png" title="" alt=""> </div>
     </div>
   </div>
 </div>
@@ -379,46 +419,7 @@
     </div>
   </div>
 </section>
-<section class="section g-bg-gray effect-section">
-  <div class="container">
-    <div class="row md-m-25px-b justify-content-center text-center">
-      <div class="col-lg-8">
-        <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">Great Performance</h6>
-        <p class="font-alt">Focus on your constituents  not web performance, security, and servers.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6 col-md-4 col-lg-3 m-15px-tb">
-        <div class="card hover-top box-shadow-only-hover p-20px"> <a class="overlay-link" href="#"></a>
-          <div class="icon-50 g-bg-2 white-color border-radius-50 m-20px-b box-shadow"> <i class="fas fa-check-double"></i> </div>
-          <h5>PERFORMANCE</h5>
-          <p class="m-0px">SSD NVMe Based Cloud Hosting. </p>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3 m-15px-tb">
-        <div class="card hover-top box-shadow-only-hover p-20px"> <a class="overlay-link" href="#"></a>
-          <div class="icon-50 g-bg-3 white-color border-radius-50 m-20px-b box-shadow"> <i class="fas fa-shield-alt"></i></div>
-          <h5>SECURITY</h5>
-          <p class="m-0px">Dedicated Firewalls and Auto-Healing Servers</p>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3 m-15px-tb">
-        <div class="card hover-top box-shadow-only-hover p-20px"> <a class="overlay-link" href="#"></a>
-          <div class="icon-50 g-bg-4 white-color border-radius-50 m-20px-b box-shadow"> <i class="fas fa-lock-open"></i> </div>
-          <h5>FREEDOM</h5>
-          <p class="m-0px">Renowned IaaS Hosting Provider</p>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4 col-lg-3 m-15px-tb">
-        <div class="card hover-top box-shadow-only-hover p-20px"> <a class="overlay-link" href="#"></a>
-          <div class="icon-50 g-bg-5 white-color border-radius-50 m-20px-b box-shadow"> <i class="fas fa-phone-alt"></i> </div>
-          <h5>TECHNICAL SUPPORT</h5>
-          <p class="m-0px">24/7 Expert Support</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+
 <!--starting footer-->
 <footer class="footer">
   <div class="footer-top footer-border-dark">
