--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
                         <h6 class="mm-title">Hosting</h6>
                         <ul class="mm-link">
                           <li><a href="shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
-                          <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
                           <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
                         <h6 class="mm-title">Offshore Hosting</h6>
                         <ul class="mm-link">
+                          <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
                           <li><a href="cloud-vps-linux.html">Offshore Cloud VPS Linux Hosting</a></li>
                           <li><a href="cloud-vps-windows.html">Offshore Cloud VPS Windows hosting</a></li>
                         </ul>
@@ -511,7 +511,7 @@
                 <div class="p-10px-l media-body"> <span class="font-2 font-w-600">Special Cloud Services</span> </div>
               </div>
             </div>
-            <div class="p-25px-t"> <a class="m-btn m-btn-theme m-btn-radius" href="#">Learn More</a> </div>
+<!--          <div class="p-25px-t"> <a class="m-btn m-btn-theme m-btn-radius" href="#">Learn More</a> </div> -->
           </div>
           <div class="col-lg-6">
             <div class="card overflow-hidden border-radius-15"> <img src="images/banner-2.png" title="" alt=""> </div>
