--- a/shared-hosting.html
+++ b/shared-hosting.html
@@ -33,18 +33,19 @@
                         <h6 class="mm-title">Hosting</h6>
                         <ul class="mm-link">
                           <li><a href="shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
-                          <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
+                          <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
-                        <h6 class="mm-title">Cloud VPS Hosting</h6>
+                        <h6 class="mm-title">Offshore Hosting</h6>
                         <ul class="mm-link">
+                          <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
                           <li><a href="cloud-vps-linux.html">Offshore Cloud VPS Linux Hosting</a></li>
                           <li><a href="cloud-vps-windows.html">Offshore Cloud VPS Windows hosting</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
-                        <h6 class="mm-title">Reseller Hosting</h6>
+                        <h6 class="mm-title">Offshore Hosting</h6>
                         <ul class="mm-link">
                           <li><a href="reseller-hosting.html">Offshore Linux Reseller Hosting</a></li>
                           <li><a href="windows-reseller-hosting.html">Offshore Windows Reseller Hosting</a></li>
@@ -68,9 +69,8 @@
                 <li><a href="https://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
               </ul>
             </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Dadicated Servers</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
                 <li><a href="dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
                 <li><a href="usa-dedicated-server.html">USA Dedicated Servers</a></li>
               </ul>
@@ -78,6 +78,7 @@
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Services</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
                 <li><a href="search-engine-optimisation.html">SEO</a></li>
+                <li><a href="colocation.html">Colocation</a></li>
                 <li><a href="cyber-security.html">Cyber Secuirty</a></li>
                 <li><a href="server-management.html">Server Management & Monitoring</a></li>
               </ul>
