--- a/email-hosting.html
+++ b/email-hosting.html
@@ -325,60 +325,26 @@
       </div>
     </div>
   </section>
-
+<!--why we go prohost section -->
   <section class="section dark-bg">
-    <div class="container">
-      <div class="row md-m-25px-b m-45px-b justify-content-center text-center white-color">
-        <div class="col-lg-8">
-          <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">CLIENT TESTIMONIALS</h6>
-          <h3 class="display-4 m-25px-b">Why go with ProHost?</h3>
-          <!--<p class="m-0px font-2">ProHost offers a comprehensive collection of operating systems and a full suite of tools and software required to operate any website, application, or system efficiently.</p>-->
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 m-15px-tb">
-          <div class="card box-shadow-only-hover hover-top">
-            <div class="p-40px">
-              <div class="d-flex align-items-center yellow-color m-20px-b"> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> </div>
-              <p class="lead">"I've been looking for a reliable and good hosting solution. I love server, it allows unlimited websites and has dedicated resources, all my sites load super fast."</p>
-              <div class="media p-15px-t">
-                <div class="media-body p-15px-l align-self-center">
-                  <h6 class="m-0px">Samantha S.</h6>
-                  <span class="font-small">Web Designer</span> </div>
-              </div>
+        <div class="container">
+          <div class="row justify-content-between">
+            <div class="col-12 col-lg-4 m-15px-tb">            
+              <img src="images/home-help-icon.png" class="max-width-140" title="" alt="">             
             </div>
-          </div>
-        </div>
-        <div class="col-md-4 m-15px-tb">
-          <div class="card box-shadow-only-hover hover-top">
-            <div class="p-40px">
-              <div class="d-flex align-items-center yellow-color m-20px-b"> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> </div>
-              <p class="lead">"I chose you because you create added value over the price offered by other hosting companies. it's been a great experience for me. I'm leaving happy. Thank you."</p>
-              <div class="media p-15px-t">
-                <div class="media-body p-15px-l align-self-center">
-                  <h6 class="m-0px">Arif Billah</h6>
-                  <span class="font-small">Eentrepreneur</span> </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 m-15px-tb">
-          <div class="card box-shadow-only-hover hover-top">
-            <div class="p-40px">
-              <div class="d-flex align-items-center yellow-color m-20px-b"> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> </div>
-              <p class="lead">"I purchased the prohost Webhosting deal earlier this year, I was really amazed at the speed of the NVMe SSD's, the excellent customer support, and ease of use."</p>
-              <div class="media p-15px-t">
-                <div class="media-body p-15px-l align-self-center">
-                  <h6 class="m-0px">Abdullah Al Maruf</h6>
-                  <span class="font-small">Bussiness Owner</span> </div>
-              </div>
-            </div>
+            <div class="col-6 col-lg-8 m-15px-tb">
+              <h3 class="h1 white-color m-0px">Need Help for Deciding or Looking help for technical issue?
+              </h3>
+              <p class=" white-color-light">Talk to one of our hosting specialist who will review your needs and propose a tailored hosting solution that will match your specific business reality and needs.
+              </p>
+              <div> <a class="m-btn m-btn-white m-btn-radius m-btn-shadow" href="https://my.prohost.sa/submitticket.php">Get Started </a>        
+              </div>           
+            </div>       
           </div>
         </div>
       </div>
-    </div>
+      
   </section>
-
   <section class="section effect-section">
     <div class="container">
       <div class="row md-m-25px-b justify-content-center text-center">
