--- a/email-hosting.html
+++ b/email-hosting.html
@@ -326,7 +326,7 @@
     </div>
   </section>
 <!--why we go prohost section -->
-  <section class="section dark-bg">
+  <!--<section class="section dark-bg">
         <div class="container">
           <div class="row justify-content-between">
             <div class="col-12 col-lg-4 m-15px-tb">            
@@ -342,8 +342,23 @@
             </div>       
           </div>
         </div>
-      </div>
+      </div>-->
       
+  </section>
+  <section class="section dark-bg">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-7 text-center text-lg-left m-15px-tb">
+          <h3 class="h1 white-color m-0px">Need Help for Deciding or Looking help for technical issue?
+          </h3>
+          <p class=" white-color-light">Talk to one of our hosting specialist who will review your needs and propose a tailored hosting solution that will match your specific business reality and needs.
+          </p>
+          <div> <a class="m-btn m-btn-white m-btn-radius m-btn-shadow" href="https://my.prohost.sa/submitticket.php">Open Ticket</a>        
+          </div>
+        </div>
+        <div class="col-lg-5 text-center text-lg-right m-15px-tb"> <img src="images/home-help-icon.png" class="max-width-140" title="" alt="">  </div>
+      </div>
+    </div>
   </section>
   <section class="section effect-section">
     <div class="container">
