again responsive issue

--- a/email-hosting.html
+++ b/email-hosting.html
@@ -348,7 +348,10 @@
   <section class="section dark-bg">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-lg-7 text-center text-lg-left m-15px-tb">
+    <div class="col-lg-4 text-center  m-15px-tb"> <img src="images/home-help-icon.png" class="max-width-140" title="" alt="">  </div>
+ 
+     
+        <div class="col-lg-8 text-center text-lg-left m-15px-tb">
           <h3 class="h1 white-color m-0px">Need Help for Deciding or Looking help for technical issue?
           </h3>
           <p class=" white-color-light">Talk to one of our hosting specialist who will review your needs and propose a tailored hosting solution that will match your specific business reality and needs.
@@ -356,8 +359,8 @@
           <div> <a class="m-btn m-btn-white m-btn-radius m-btn-shadow" href="https://my.prohost.sa/submitticket.php">Open Ticket</a>        
           </div>
         </div>
-        <div class="col-lg-5 text-center text-lg-right m-15px-tb"> <img src="images/home-help-icon.png" class="max-width-140" title="" alt="">  </div>
-      </div>
+        </div>
+        
     </div>
   </section>
   <section class="section effect-section">
