change hole site

--- a/cloud-vps-server.html
+++ b/cloud-vps-server.html
@@ -8,17 +8,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="keywords" content="ProHost" />
 <meta name="description" content="ProHost" />
-<title>Prohost</title>
+<title>ProHost</title>
 <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body data-spy="scroll" data-target="#navbar-collapse-toggle" data-offset="98">
-<header class="header-nav header-white header-transparent">
+<header class="header-nav header-dark header-transparent">
   <div class="fixed-header-bar"> 
     <div class="container">
-      <div class="navbar navbar-main navbar-expand-lg"> <a class="navbar-brand" href="index.html"> <img class="logo-light" alt="" title="" src="images/logo.png"> <img class="logo-dark" alt="" title="" src="images/logoi.png"> </a>
+      <div class="navbar navbar-main navbar-expand-lg"> <a class="navbar-brand" href="index.html"> <img class="logo-light" alt="" title="" src="images/logoi.png"> <img class="logo-dark" alt="" title="" src="images/logoi.png"> </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-main-collapse" aria-controls="navbar-main-collapse" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
         <div class="collapse navbar-collapse navbar-collapse-overlay" id="navbar-main-collapse">
           <ul class="navbar-nav ml-auto">
@@ -33,18 +33,19 @@
                         <h6 class="mm-title">Hosting</h6>
                         <ul class="mm-link">
                           <li><a href="shared-hosting.html">Saudi Arabia Linux Shared Hosting</a></li>
-                          <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
+                          <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
-                        <h6 class="mm-title">Cloud VPS Hosting</h6>
+                        <h6 class="mm-title">Offshore Hosting</h6>
                         <ul class="mm-link">
+                          <li><a href="offshore-shared-hosting.html">Offshore Linux Shared Hosting</a></li>
                           <li><a href="cloud-vps-linux.html">Offshore Cloud VPS Linux Hosting</a></li>
                           <li><a href="cloud-vps-windows.html">Offshore Cloud VPS Windows hosting</a></li>
                         </ul>
                       </div>
                       <div class="col-lg-3">
-                        <h6 class="mm-title">Reseller Hosting</h6>
+                        <h6 class="mm-title">Offshore Hosting</h6>
                         <ul class="mm-link">
                           <li><a href="reseller-hosting.html">Offshore Linux Reseller Hosting</a></li>
                           <li><a href="windows-reseller-hosting.html">Offshore Windows Reseller Hosting</a></li>
@@ -68,16 +69,17 @@
                 <li><a href="https://my.prohost.sa/cart.php?a=add&domain=transfer">Domain Transfer</a></li>
               </ul>
             </li>
-            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Cloud</a> <i class="fa fa-angle-down px-nav-toggle"></i>
+            <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Dadicated Servers</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
-                <li><a href="cloud-vps-server.html">Saudi Arabia Linux Cloud VPS Servers</a></li>
                 <li><a href="dedicated-server.html">Saudi Arabia Dedicated Servers</a></li>
                 <li><a href="usa-dedicated-server.html">USA Dedicated Servers</a></li>
               </ul>
             </li>
             <li class="nav-item mm-in px-dropdown"> <a class="nav-link" href="#">Services</a> <i class="fa fa-angle-down px-nav-toggle"></i>
               <ul class="px-dropdown-menu mm-dorp-in">
+                <li><a href="ssl.html">SSL</a></li>
                 <li><a href="search-engine-optimisation.html">SEO</a></li>
+                <li><a href="colocation.html">Colocation</a></li>
                 <li><a href="cyber-security.html">Cyber Secuirty</a></li>
                 <li><a href="server-management.html">Server Management & Monitoring</a></li>
               </ul>
@@ -90,9 +92,9 @@
                 <li><a href="email-hosting.html">Email Hosting</a></li>
               </ul>
             </li>
+          
           </ul>
-          <a class="d-none d-lg-inline-block ml-auto m-btn m-btn-radius m-btn-theme2nd m-btn-sm" href="https://my.prohost.sa">Login/Sign up</a> 
-        </div>
+          <a class="d-none d-lg-inline-block ml-auto m-btn m-btn-radius m-btn-theme2nd m-btn-sm" href="https://my.prohost.sa">Login/Sign up</a> </div>
       </div>
     </div>
   </div>
@@ -365,56 +367,20 @@
       </div>
     </div>
   </section>
+  <!--why we go prohost section -->
   <section class="section dark-bg">
     <div class="container">
-      <div class="row md-m-25px-b m-45px-b justify-content-center text-center white-color">
-        <div class="col-lg-8">
-          <h6 class="white-color m-15px-b theme2nd-bg p-15px-lr p-5px-tb d-inline-block border-radius-15 font-small">CLIENT TESTIMONIALS</h6>
-          <h3 class="display-4 m-25px-b">Why go with ProHost?</h3>
-          <!--<p class="m-0px font-2">ProHost offers a comprehensive collection of operating systems and a full suite of tools and software required to operate any website, application, or system efficiently.</p>-->
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 m-15px-tb">
-          <div class="card box-shadow-only-hover hover-top">
-            <div class="p-40px">
-              <div class="d-flex align-items-center yellow-color m-20px-b"> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> </div>
-              <p class="lead">"I've been looking for a reliable and good hosting solution. I love server, it allows unlimited websites and has dedicated resources, all my sites load super fast."</p>
-              <div class="media p-15px-t">
-                <div class="media-body p-15px-l align-self-center">
-                  <h6 class="m-0px">Samantha S.</h6>
-                  <span class="font-small">Web Designer</span> </div>
-              </div>
-            </div>
+      <div class="row align-items-center">
+    <div class="col-lg-4 text-center  m-15px-tb"> <img src="images/home-help-icon.png" class="max-width-140" title="" alt="">  </div>     
+        <div class="col-lg-8 text-center text-lg-left m-15px-tb">
+          <h3 class="h1 white-color m-0px">Need Help for Deciding or Looking help for technical issue?
+          </h3>
+          <p class=" white-color-light">Talk to one of our hosting specialist who will review your needs and propose a tailored hosting solution that will match your specific business reality and needs.
+          </p>
+          <div> <a class="m-btn m-btn-white m-btn-radius m-btn-shadow" href="https://my.prohost.sa/submitticket.php">Open Ticket</a>        
           </div>
         </div>
-        <div class="col-md-4 m-15px-tb">
-          <div class="card box-shadow-only-hover hover-top">
-            <div class="p-40px">
-              <div class="d-flex align-items-center yellow-color m-20px-b"> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> </div>
-              <p class="lead">"I chose you because you create added value over the price offered by other hosting companies. it's been a great experience for me. I'm leaving happy. Thank you."</p>
-              <div class="media p-15px-t">
-                <div class="media-body p-15px-l align-self-center">
-                  <h6 class="m-0px">Arif Billah</h6>
-                  <span class="font-small">Eentrepreneur</span> </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 m-15px-tb">
-          <div class="card box-shadow-only-hover hover-top">
-            <div class="p-40px">
-              <div class="d-flex align-items-center yellow-color m-20px-b"> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> </div>
-              <p class="lead">"I purchased the prohost Webhosting deal earlier this Year, I was really amazed at the speed of the NVMe SSD's, the excellent customer support, and ease of use."</p>
-              <div class="media p-15px-t">
-                <div class="media-body p-15px-l align-self-center">
-                  <h6 class="m-0px">Abdullah Al Maruf</h6>
-                  <span class="font-small">Bussiness Owner</span> </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+        </div>       
     </div>
   </section>
   <section class="section gray-bg">
