--- a/domain-register.html
+++ b/domain-register.html
@@ -11,6 +11,7 @@
 <title>ProHost</title>
 <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
 <link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/sa-domain.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -136,7 +137,7 @@
 <section>
 <div class="grey-bg content-wrapper-8-5 relative" dir="ltr">
 <div class="container">
-<h1 class="mb-20 text-center ">Saudi Arabia Domains Price List</h1>
+  <h1 class="mb-20 text-center ">Saudi Arabia Domains Price List</h1>
 <div class="row">
 <div class="col-md-12">
 <div class="flex-container">
