remove unnecessary files

--- a/colocation.html
+++ b/colocation.html
@@ -303,12 +303,10 @@
           
           <h3 class="h2 m-15px-b">Colocation Connectivity
           </h3>
-          <p class="m-0px font-2">Multiple Tier-3 Data Centers in Riyadh, Saudi Arabia.
-             Direct Connectivity to Data Center core network. 99.99% up-time. Up-to 1Gbps BDIX Connectivity and International Banwdith available.
-
-
+          <p class="m-0px font-2">, Prohost has created designated departments within its data centers,
+offering advanced colocation services which are escalated by individual Rack Units to Rack Cages and
+Suites, Disaster Recovery, and Business Continuity service.
           </p>
-          
         </div>
         <div class="col-lg-6">
           <div class="card overflow-hidden border-radius-15"> <img src="images/colocationconnection.svg" title="" alt=""> </div>
