change footer and fix link

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <li><i class="fas fa-check"></i> Free SSL Certificate</li>
               </ul>
             </div>
-            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="#">Get Started</a> </div>
+            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/saudi-arabia-shared-hosting/basic">Get Started</a> </div>
           </div>
         </div>
         <div class="col-lg-4 m-15px-tb">
@@ -308,7 +308,7 @@
                 <li><i class="fas fa-check"></i> cPanel/WHM Included</li>
               </ul>
             </div>
-            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="#">Get Started</a> </div>
+            <div class="pt-footer"> <a class="m-btn m-btn-theme m-btn-radius" href="https://my.prohost.sa/store/offshore-cloud-linux-hosting/chl-1">Get Started</a> </div>
           </div>
         </div>
         <div class="col-lg-4 m-15px-tb">
@@ -517,7 +517,7 @@
                 <div class="p-10px-l media-body"> <span class="font-2 font-w-600">24/7/365 Support</span> </div>
               </div>
             </div>
-            <div class="p-25px-t"> <a class="m-btn m-btn-theme m-btn-radius" href="#">Learn More</a> </div>
+            
           </div>
           <div class="col-lg-6">
             <div class="card overflow-hidden border-radius-15"> <img src="images/banner-3.png" title="" alt=""> </div>
