--- a/contact-us.html
+++ b/contact-us.html
@@ -244,7 +244,7 @@
             <h5 class="m-20px-b"> Connect with Prohost</h5>
             <p class="font-small m-0px"><b>Sales: </b>sales@prohost.sa</p><br>
             <p class="font-small m-0px"><b>Support: </b>support@prohost.sa</p> <br>
-            <p class="font-small m-0px"><b>Mobile: </b>+966550243031(Whatsapp)</p><br>
+            <p class="font-small m-0px"><b>Mobile: </b>+966550243031</p><br>
             <p class="font-small m-0px"><b>Phone: </b>8002472030</p>
           </div>
           
@@ -288,7 +288,7 @@
           <p class="m-0px font-small">© 2023 copyright all right reserved || ProHost.Sa</p>
         </div>
         <div class="col-md-6 text-center text-md-right m-5px-tb">
-          <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="https://www.facebook.com/prohostsa"><i class="fab fa-facebook-f"></i></a> <a href="https://twitter.com/prohostsa"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/company/prohost-sa/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.youtube.com/prohostsa"><i class="fab fa-youtube"></i></a> </div>
+          <div class="social-icon si-30 gray radius nav justify-content-center justify-content-md-end"> <a href="https://www.facebook.com/prohostsa"><i class="fab fa-facebook-f"></i></a> <a href="https://twitter.com/prohostsa"><i class="fab fa-twitter"></i></a> <a href="https://www.linkedin.com/company/prohost-sa/"><i class="fab fa-linkedin-in"></i></a> <a href="https://www.youtube.com/prohostsa"><i class="fab fa-youtube"></i></a><a href="https://api.whatsapp.com/send/?phone=966550243031"><i class="fab fa-whatsapp"></i></a> </div>
         </div>
       </div>
     </div>
