modify services again

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         </div>
       </div>
       <div class="row separated border-all-1 border-color-dark-gray no-gutters">
-       <!-- <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
+        <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href=""><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"> <i class="fab fa-sass"></i> </div>
             <h5 class="m-0px theme-color-alt">SOFTWARE AS SERVICE</h5>
@@ -149,7 +149,7 @@
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-cloud-meatball"></i></div>
             <h5 class="m-0px theme-color-alt">PLATFORM AS SERVICE</h5>
           </div></a>
-        </div>-->
+        </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href="cloud-vps-windows.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-link"></i></div>
@@ -161,7 +161,7 @@
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"> <i class="fas fa-shield-alt"></i> </div>
             <h5 class="m-0px theme-color-alt">CYBER SECURITY</h5>
           </div></a>
-        </div><!--
+        </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href="#"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"> <i class="fas fa-network-wired"></i> </div>
@@ -185,7 +185,7 @@
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-gamepad"></i></div>
             <h5 class="m-0px theme-color-alt">GAMES HOSTING</h5>
           </div></a>
-        </div>-->
+        </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href="email-hosting.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-envelope"></i></div>
@@ -197,13 +197,13 @@
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-hdd"></i> </div>
             <h5 class="m-0px theme-color-alt">VPS</h5>
           </div></a>
-        </div><!--
+        </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href="#"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-boxes"></i> </div>
             <h5 class="m-0px theme-color-alt">BACKUP</h5>
           </div></a>
-        </div>-->
+        </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href="saudi-domain-registration.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-globe-europe"></i></div>
@@ -229,27 +229,27 @@
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
-          <a href="shared-hosting.html"><div class="p-20px-lr p-40px-tb text-center">
+          <a href="#"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-warehouse"></i></div>
-            <h5 class="m-0px theme-color-alt">Saudi Arabia Shared Hosting</h5>
+            <h5 class="m-0px theme-color-alt">BIG STORAGE</h5>
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href="colocation.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fas fa-clone"></i></div>
-            <h5 class="m-0px theme-color-alt">Colocation</h5>
+            <h5 class="m-0px theme-color-alt">COLOCATION</h5>
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href="microsoft-office-365.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fab fa-microsoft"></i></div>
-            <h5 class="m-0px theme-color-alt">Microsoft 365</h5>
+            <h5 class="m-0px theme-color-alt">MICROSOFT 365</h5>
           </div></a>
         </div>
         <div class="col-sm-6 col-lg-3 white-bg theme-hover-bg">
           <a href="google-workspace.html"><div class="p-20px-lr p-40px-tb text-center">
             <div class="only-icon-80 border-radius-50 theme-color m-20px-b d-inline-block"><i class="fab fa-google"></i></div>
-            <h5 class="m-0px theme-color-alt">Google Workspace</h5>
+            <h5 class="m-0px theme-color-alt">GOOGLE WORKSPACE</h5>
           </div></a>
         </div>
       </div>
